2010-01-16  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by David Kilzer.

        Update iExploder/htdocs/*.in by running update-iexploder-cssproperties 
        https://bugs.webkit.org/show_bug.cgi?id=33756

        * iExploder/htdocs/cssproperties.in: New CSS attributes
        * iExploder/htdocs/htmlattrs.in: New HTML attributes
        * iExploder/htdocs/htmltags.in: New HTML tags

2010-01-15  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by David Kilzer.

        Altered parseDiffHeader() to skip unrecognized lines and
        other minor clean-ups.

        https://bugs.webkit.org/show_bug.cgi?id=33476

        * Scripts/VCSUtils.pm:
          - Changed parseDiffHeader() as follows:
            - Skips over unrecognized lines.
            - Addressed FIXME to remove substitution for "diff" line.
            - Renamed "version" header hash key to "sourceRevision".
            - Eliminated "copiedFromVersion" header hash key.
            - Included "sourceRevision" also for copied files.
            - Checks that copy revision number matches "sourceRevision".
            - No longer returns $foundHeaderEnding.
            - Dies if header ending not found.
            - Diff header dividing line now always added.

        * Scripts/webkitperl/VCSUtils_unittest/parseDiffHeader.pl:
          - Made necessary changes in parseDiffHeader() unit tests.
          - Shortened the file paths in some test cases.

2010-01-14  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Alexey Proskuryakov.

        Update pywebsocket to 0.4.6
        https://bugs.webkit.org/show_bug.cgi?id=32299
        The newer pywebsocket can handle more simultaneous connections.

        * pywebsocket/mod_pywebsocket/handshake.py:
        * pywebsocket/mod_pywebsocket/standalone.py:
        * pywebsocket/setup.py:
        * pywebsocket/test/test_handshake.py:

2010-01-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.
