@@ -268,6 +268,14 @@ vspace
 width
 wrap
 
+# Removed from WebKit between r14011 and r53119
+left
+pagex
+pagey
+plain
+pluginpage
+pluginspage
+
 # was in khtml in 2004, but is no longer in WebCore
 accept-charset
 html
